# Nautilus

./: .gitignore  Cargo.toml  README.md  features.md  fr_list.md
benches/: Nautilus-Benchmark-Analysis.ipynb  README.md
core/: Cargo.toml
core/src/: event_bus.rs  lib.rs
core/src/traits/connection/: connection_error.rs  connection_event.rs  connection_traits.rs  datagram_trait.rs  framing.rs  middleware_traits.rs  mod.rs  secure_connection.rs  transport_trait.rs
core/src/traits/connection/framing/: backpressure_framing.rs  delimiter.rs  length_prefixed.rs  length_prefixed_with_checksum.rs  streaming_frame.rs
core/tests/: connection_tests.rs
docs/: CONTRIBUTING.md
identity/: .gitignore  Cargo.toml
identity/benches/: benchmark.rs  csv_util.rs
identity/benches/pki_benchmark/: keypair_generation_benchmark.rs  keypair_serialization_benchmark.rs  keypair_throughput_benchmark.rs  keypair_verify_sign_benchmark.rs  memory_benchmark.rs  rsa_benchmark.rs
identity/decentralized_identity/: Cargo.toml  build.rs
identity/decentralized_identity/examples/: decentralized_identity.rs  decentralized_vc_example.rs
identity/decentralized_identity/src/: credential_issuance.rs  did.rs  did_document.rs  identity_error.rs  identity_flow.rs  identity_mgmt.rs  key_mgmt.rs  lib.rs  pki_factory.rs  vc.rs
identity/decentralized_identity/tests/: did_document_test.rs  key_mgmt_test.rs  user_document_test.rs  vc_test.rs
identity/examples/: identity_example.rs
identity/key-storage/: Cargo.toml
identity/key-storage/examples/: key_storage_example.rs
identity/key-storage/src/: cloud_storage.rs  file_format_trait.rs  file_storage.rs  in_memory_key_storage.rs  key_storage_error.rs  key_storage_trait.rs  lib.rs  linux_storage.rs  windows_storage.rs
identity/key-storage/src/cloud_storage/: amazon_s3_storage.rs
identity/key-storage/src/file_format/: json_formatter.rs  mod.rs  pem_formatter.rs
identity/key-storage/src/linux_storage/: linux_keyring_storage.rs
identity/key-storage/src/windows_storage/: windows_key_ring_storage.rs  windows_tsm_storage.rs
identity/src/: cipher_suite.rs  key_exchange.rs  key_exchnage_traits.rs  key_serde_trait.rs  lib.rs  pki_error.rs  pki_trait.rs
identity/src/pki/: dilithium_keypair.rs  ecdsa_keypair.rs  ed25519_keypair.rs  falcon_keypair.rs  kyber_keypair.rs  mod.rs  rsa_keypair.rs  secp256k1_keypair.rs  spincs_keypair.rs
identity/tests/: dilithium_test.rs  ecdsa_test.rs  ed25519_test.rs  falcon_test.rs  kyber_keyexchange_test.rs  rsa_test.rs  secp256k1_test.rs  spincs_test.rs
protocols/handshake/: Cargo.toml
protocols/handshake/examples/: handshake_testing.rs
protocols/handshake/src/: handshake.rs  handshake_error.rs  lib.rs  steps.rs  traits.rs
protocols/handshake/tests/: basic_test.rs  edge_cases.rs  integeration_test.rs
protocols/kad/: Cargo.toml
protocols/kad/examples/: bootstrap_service.rs
protocols/kad/src/: bootstrap.rs  kad_message.rs  kad_protocol.rs  lib.rs  node.rs  routing_table.rs  utils.rs  xor_distance.rs
protocols/kad/src/behaviour/: behaviour.rs  learning.rs  maintenance.rs  messaging.rs  mod.rs
protocols/kad/tests/: basic_tests.rs
protocols/mdns/: Cargo.toml  README.md
protocols/mdns/examples/: mdns_example.rs
protocols/mdns/src/: behaviour.rs  lib.rs  name.rs  packet.rs  record.rs
protocols/negotiation/: Cargo.toml
protocols/negotiation/src/: cipher_suite.rs  client.rs  context.rs  lib.rs  negotiation.rs  negotiation_error.rs  negotiation_message.rs  negotiation_strategy.rs  negotiation_traits.rs  server.rs  traits.rs
protocols/negotiation/tests/: negotiation_strategy_test.rs  negotiation_tetsing.rs
protocols/ping/src/: lib.rs  peer.rs
protocols/ping/tests/: basic_test.rs  integration_test.rs  stress_test.rs
protocols/tls/: Cargo.toml
protocols/tls/examples/: adaptive_tls_session_example.rs  server_client_example.rs  tls_session_example.rs
protocols/tls/src/: connection.rs  handshake.rs  lib.rs  record.rs  tls_session.rs  tls_state.rs
security/authentication/: Cargo.toml
security/authentication/src/: cmac_auth.rs  hash_chain.rs  hmac_auth.rs  lib.rs  traits.rs
security/authentication/tests/: basic_auth_test.rs
security/data_encryption/: Cargo.toml
security/data_encryption/examples/: tcp_stream_encryption.rs
security/data_encryption/src/: encryption.rs  encryption_error.rs  encryption_trait.rs  key_derivation_trait.rs  lib.rs  stream_encryption_trait.rs  utils.rs
security/data_encryption/src/encryption/: aes_symmetric.rs  blowfish_symmetric.rs  chacha20_symmetric.rs  des_symmetric.rs
security/data_encryption/src/key_derive/: argon2_key_derive.rs  mod.rs  pbkdf2_key_derive.rs  scrypt_key_derive.rs
security/data_encryption/tests/: 3des_encryption_test.rs  aes_encryption_test.rs  argon2_derive_test.rs  blwfish_encryption_test.rs  chacha20_encryption_test.rs  pbkdf_derive_test.rs  scrypt_derive_test.rs  symmetric_suite_test.rs
submarine/: Cargo.toml  README.md
submarine/examples/: mdns_example.rs
submarine/src/: lib.rs
submarine/src/core/: event_bus.rs  mod.rs
submarine/src/services/: connection_manager.rs  discovery.rs  mod.rs  service_manager.rs  session_manager.rs  trasnport_manager.rs
submarine/tests/: submarine_basic_test.rs
transport/tcp/: Cargo.toml
transport/tcp/examples/: tcp_conn_example.rs  testing_secure_comm.rs
transport/tcp/src/: lib.rs  tcp_conn.rs  tcp_events.rs
transport/tcp/tests/: tcp_conn_framing_test.rs
transport/tls/: Cargo.toml
transport/tls/src/: init_encryption.rs  lib.rs  tls_conn.rs  tls_error.rs  tls_handshake.rs  tls_listener.rs
transport/udp/: Cargo.toml
utilities/certificate_parser/: Cargo.toml
utilities/registry/: Cargo.toml
utilities/registry/examples/: registry_example.rs
utilities/registry/src/: data_source_traits.rs  hashring_shard.rs  lib.rs  record_trait.rs  registry_record_error.rs  registry_traits.rs
utilities/registry/src/registry_mods/: in_memory_registry.rs  mod.rs  redis_registry.rs
utilities/registry/tests/: in_memory_testing.rs  redis_testing.rs  testing_hashring_shard.rs  testing_pipeline.rs
(+27 files in other folders)
