[package]
name = "nautilus_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = {version = "0.1.85"}
tokio = {version = "1.0.0",features = ["full"]}
crc32fast = {version = "1.4.2"}
futures = {version = "0.3.31"}

identity = { path = "../identity", default-features = false }
data_encryption = {path = "../security/data_encryption",default_features = false}