[package]
name = "identity"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rand_core = {version = "0.6",features = ["getrandom"]}
serde_json = "1.0.135"
serde = {version = "1.0.0", features = ["derive",]}

rsa = {version = "0.9.6",features = ["sha2"], optional = true} # For RSA
sha2 = {version = "0.10.1",optional = true} # For Hashing/RSA

k256 = {version="0.13.4", optional = true,features = ["ecdh"]} # For secp256k1

p256 = {version = "0.13.2",optional = true} # For ECDSA

ed25519-dalek = {version = "2.1.1",optional = true} # For Ed25519
curve25519-dalek = {version = "4.0.0",optional = true}

fips203 = {version ="0.4.2",optional = true}

fips204 = {version = "0.4.6",optional = true} # For Dilithium

fips205 = {version = "0.4.1",optional = true} # For Spincs+

pqcrypto-falcon = {version = "0.4.0",optional = true} # For Falcon
pqcrypto-traits = {version = "0.3.5",optional = true} # For Falcon


[features]
default = ["pki_rsa"] # default features
pki_rsa = ["rsa","sha2"] # rsa features
secp256k1 = ["k256"] # secp256k1 features
ecdsa = ["p256"] # ecdsa features
ed25519 = ["ed25519-dalek"]  # Enable Ed25519 support when this feature flag is specified
dilithium = ["fips204"] # Enable Dilithium support when this feature flag is specified
spincs = ["fips205"] # Enable Spincs+ support when this feature flag is specified
falcon = ["pqcrypto-falcon","pqcrypto-traits"] # Not FIPS STANDARD, OFFICIAL RELEASE
kyber = ["fips203","sha2"]
[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"


