[package]
name = "submarine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.1"  # For the API layer
log = "0.4"
env_logger = "0.11.6"
hex = "0.4.3"

mdns = { path = "../protocols/mdns" }
kad = { path = "../protocols/kad" }
tls = {path = "../protocols/tls"}
udp = {path = "../transport/udp"}
tcp = {path = "../transport/tcp"}
nautilus_core = {path = "../core"}