[package]
name = "decentralized_identity"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
chrono = {version = "0.4.39"}

identity = {path = "../",features = ["dilithium","falcon","ed25519"]}
base64 = "0.22.1"
uuid = { version = "1.10.0", features = ["v4"] }