[package]
name = "key-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
# For Windows Dependencies
bincode = {version = "1.3.3",optional = true}
winapi = { version = "0.3.9", features = ["dpapi", "errhandlingapi", "winbase", "minwindef", "wincrypt","wincred"] , optional = true}

# For Linux Dependencies
linux-keyutils = {version = "0.2.4",optional = true}

# For File Format Coversion
pem = {version = "3.0.4"}

# data_encryption = {path = "../../security/data_encryption",features = ["pbkdf"]}

[features]
default = ["memory"] # Features enabled by default
memory = ["bincode"]  # Feature flag for in-memory storage
keyring = ["winapi"]
tsm = ["winapi"]
linux_secure_storage = ["linux-keyutils"] # Linux secure storage feature