[package]
name = "kad"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = {version = "0.8.5"}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.0"}
bincode = {version = "1.0.0"}
tokio = {version = "1.0.0"}
udp = {path = "../../transport/udp"}
nautilus_core = {path = "../../core"}
hex = "0.4" 