[package]
name = "negotiation"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.135"}
tcp = {path = "../../transport/tcp"}
identity = {path = "../../identity",features = ["ecdsa"]}
tokio = {version = "1.0.0"}

[dev-dependencies]
nautilus_core = {path = "../../core"}