[package]
name = "tls"
version = "0.1.0"
edition = "2021"

[dependencies]
handshake = {path = "../handshake"}
tokio = {version = "1.0.0",features = ["full"]}
futures = {version = "0.3.31"}
thiserror = {version = "2.0.11"}
async-trait = {version = "0.1.85"}
aes-gcm = "0.10" # Check for the latest version
nautilus_core = {path = "../../core"}
rand = {version = "0.8.5"}