[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.0",features = ["derive"]}
async-trait = {version = "0.1.85"}
tokio = {version = "1.0.0",features = ["full"]}
serde_json = "1.0"
futures ={version = "0.3.31"}
redis = { version = "0.27.6", optional = true, features = ["tokio-comp"] }
deadpool-redis = { version = "0.18.0", optional = true }
[dev-dependencies]


[features]
default = []
redis_registry = ["redis", "deadpool-redis"]